<resources>
    <string name="app_name">MedHelperAndroid</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_new_psw">Восстановить пароль или зарегестрироваться</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_profile">"Добавить\nпрофиль"</string>
    <string name="logout">"Выйти"</string>
    <string name="select_profile" />
</resources>